# extended-isolation-forest

./: .gitignore  CHANGES.md  Cargo.toml  README.md
.github/workflows/: ci.yml
data/acceleration/: walking-stairs.annomaly.csv  walking-stairs.train.csv
examples/: walking_stairs.rs
src/: error.rs  lib.rs  serde_array.rs
